Another try to fix window height on mobile

--- a/resources/css/billuc.css
+++ b/resources/css/billuc.css
@@ -48,6 +48,7 @@
 html {
     width: 100%;
     height: 100vh;
+    height: -webkit-fill-available;
 
     background: url('../images/cool-background.png');/*var(--black);*/
     background-repeat: repeat-y;
@@ -60,6 +61,7 @@ html {
 body {
     width: 100%;
     height: 100vh;
+    height: -webkit-fill-available;
 
     margin: 0;
     vertical-align: middle;
